--- a/public/jelena.html
+++ b/public/jelena.html
@@ -12,17 +12,17 @@
     </p>
     <hr />
     <div>
-      <h1> Hello</h1>
-<p>
-  The time is now:
-  2012-11-08 00:28:31 -0800
-</p>
+      <h1> Welcome </h1>
 
-<p>
-  My Name is:
+<ul>
   
-</p>
-
+    <li>I like to swim</li>
+  
+    <li>I like to ski</li>
+  
+    <li>I like to hike</li>
+  
+</ul>
 
     </div>
     <hr />
